# KingdomAi

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  kingdom_ai_consumer.py  pyproject.toml  requirements-blockchain.txt  requirements-extras.txt  requirements-gemini.txt  requirements-trading.txt  requirements-voice.txt  requirements.txt  security_requirements.txt
blockchain/: __init__.py  algorand_adapter.py  aptos_adapter.py  arbitrum_adapter.py  avalanche_adapter.py  base_adapter.py  bitcoin_adapter.py  blast_adapter.py  blockchain_bridge.py  blockchain_connector.py  blockchain_connector_system.py  blockchain_explorer.py  blockchain_integration.py  blockchain_registry.py  bsc_adapter.py  cardano_adapter.py  celo_adapter.py  celo_adapter_balance.py  celo_adapter_connection.py  celo_adapter_sign_broadcast.py  celo_adapter_transaction.py  cosmos_adapter.py  ethereum_adapter.py  filecoin_adapter.py  flow_adapter.py  hedera_adapter.py  hyperliquid_adapter.py  injective_adapter.py  injective_adapter_balance.py  injective_adapter_connect.py  injective_adapter_transaction.py  mining_dashboard.py  mining_system.py  monero_adapter.py  near_adapter.py  network_stats.py  optimism_adapter.py  polkadot_adapter.py  polygon_adapter.py  solana_adapter.py  (+16 more)
components/: __init__.py  alchemy_system.py  api_connector.py  audio_synthesis_engine.py  biological_system.py  blueprint_engine.py  bone_conduction_driver.py  capital_flow_processor.py  chemistry_database.py  chemistry_manufacturing_integration.py  claw_code_bridge.py  continuous_response.py  continuous_response_generator.py  dictionary_brain.py  eeg_signal_processor.py  enhanced_file_export_sota_2026.py  error_resolver.py  event_bus.py  exploded_view_engine.py  hardware_interface_layer.py  harmonic_orchestrator_v3.py  hmd_integration.py  language_learning_hub.py  lsl_sync_engine.py  manufacturing_engine.py  market_component.py  media_export.py  memory_palace_manager.py  memory_persistence_layer.py  mempalace_bridge.py  mempalace_mcp_server.py  mempalace_setup.py  metallurgy_engine.py  mining_system.py  neuroprotection_layer.py  ollama_memory_integration.py  risk_assessment.py  sandbox_hardening.py  schematic_engine.py  sleep_manager.py  (+9 more)
config/: COMPLETE_SYSTEM_CONFIG.json  airdrops.json  all_blockchains.json  api_key_catalog.json  api_keys.example.json  audio_config.py  blockchain_config.json  comprehensive_blockchain_config.json  config.json  copy_trading_config.json  database_config.json  default_configs.py  env_config.json  intent_recognition_config.json  kingdom_config.json  local_mining.json  logging_config.py  meta_learning_config.json  miner_paths.json  mining_config.json  mining_config_fixed.json  mining_pools_2025.json  mining_pools_2026.json  multi_coin_wallets.json  pow_blockchains.json  pow_nodes.json  prediction_engine_config.json  redis_config.json  rotation_tracking.json  storage_paths.json  (+16 more)
mobile/: __init__.py  kingdom_mobile.py  kingdom_mobile_consumer.py  kingdom_mobile_creator.py  pyproject.toml  requirements.txt
(+1090 files in other folders)
