[tool.poetry]
name = "kingdom-ai"
version = "0.1.0"
description = "Kingdom AI Trading System"
authors = ["Kingdom AI Team"]

[tool.poetry.dependencies]
python = "^3.10"
pytest-asyncio = ">=0.21.0,<0.22.0"  # Pin this version for anchorpy compatibility
customtkinter = "^5.2.2"
web3 = "^6.11.3"
numpy = "^2.2.0"
pandas = "^2.2.0"
torch = "^2.0.0"
scikit-learn = "^1.5.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
aiohttp = "^3.8.0"
websockets = "^11.0.0"
ccxt = "^4.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
pylint = "^2.17.0"
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
